--- a/AndroidActivity/app/src/main/AndroidManifest.xml
+++ b/AndroidActivity/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.AndroidActivity"
         tools:targetApi="31">
         <activity
+            android:name=".SampleCardView"
+            android:exported="false" />
+        <activity
+            android:name=".PetaniAdapterCv"
+            android:exported="false" />
+        <activity
             android:name=".SampleRecyclerView"
             android:exported="true" />
         <activity
@@ -25,7 +31,7 @@
         <activity
             android:name=".SampleList"
             android:exported="true"
-            android:label="SampleList"/>
+            android:label="SampleList" />
         <activity
             android:name=".DutataniActivity"
             android:exported="true"
@@ -46,9 +52,10 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="Main Activity" >
+            android:label="Main Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
